--- a/server/config.json
+++ b/server/config.json
@@ -1,7 +1,7 @@
 {
-  "data_max_length": 4096,
+  "data_max_length": 16384,
   "local_address": {
-    "private_ip": "x.x.x.x",
+    "private_ip": "127.0.0.1",
     "ports": [
       null,
       null
