--- a/client/config.json
+++ b/client/config.json
@@ -1,18 +1,18 @@
 {
   "host": {
-    "data_max_length": 4096,
+    "data_max_length": 16384,
     "server_address": {
-      "internet_ip": "127.0.0.1",
-      "port": null
+      "internet_ip": "43.228.38.117",
+      "port": 25565
     },
     "file_log": true,
     "debug": false
   },
   "visitor": {
-    "data_max_length": 4096,
+    "data_max_length": 16384,
     "server_address": {
-      "internet_ip": "127.0.0.1",
-      "port": null
+      "internet_ip": "43.228.38.117",
+      "port": 25566
     },
     "virtual_open_port": 25566,
     "file_log": true,
