--- a/client/config.json
+++ b/client/config.json
@@ -2,7 +2,7 @@
   "host": {
     "data_max_length": 2097152,
     "server_address": {
-      "internet_ip": "x.x.x.x",
+      "internet_ip": "43.228.38.117",
       "port": 25565
     },
     "file_log": true,
@@ -14,7 +14,7 @@
   "visitor": {
     "data_max_length": 2097152,
     "server_address": {
-      "internet_ip": "x.x.x.x",
+      "internet_ip": "43.228.38.117",
       "port": 25566
     },
     "virtual_open_port": 25566,
