update server log

--- a/server/config.json
+++ b/server/config.json
@@ -8,9 +8,8 @@
     ]
   },
   "file_log": true,
-  "debug": {
-    "global": true,
+  "console": {
     "length": true,
-    "context": false
+    "context": true
   }
 }
