--- a/server/server/config.json
+++ b/server/server/config.json
@@ -3,12 +3,13 @@
   "local_address": {
     "private_ip": "127.0.0.1",
     "ports": [
-      null,
-      null
+      9999,
+      9998
     ]
   },
   "debug": {
     "file_log": true,
+    "clear_log": true,
     "console": {
       "length": true,
       "content": true
