--- a/client/client/config.json
+++ b/client/client/config.json
@@ -1,33 +1,33 @@
 {
   "host": {
-    "data_max_length": 99999999,
+    "data_max_length": 20,
+    "debug": {
+      "clear_log": false,
+      "console": {
+        "content": true,
+        "length": true
+      },
+      "file_log": true
+    },
     "server_address": {
       "internet_ip": "127.0.0.1",
       "port": 9999
-    },
-    "debug": {
-      "file_log": true,
-      "clear_log": false,
-      "console": {
-        "length": true,
-        "content": true
-      }
     }
   },
   "visitor": {
-    "data_max_length": 99999999,
+    "data_max_length": 30,
+    "debug": {
+      "clear_log": false,
+      "console": {
+        "content": true,
+        "length": true
+      },
+      "file_log": true
+    },
     "server_address": {
       "internet_ip": "127.0.0.1",
       "port": 9998
     },
-    "virtual_open_port": 25566,
-    "debug": {
-      "file_log": true,
-      "clear_log": false,
-      "console": {
-        "length": true,
-        "content": true
-      }
-    }
+    "virtual_open_port": 25566
   }
 }
