--- a/client/client/config.json
+++ b/client/client/config.json
@@ -9,9 +9,10 @@
       },
       "file_log": true
     },
+    "open_port": "25565",
     "server_address": {
       "internet_ip": "127.0.0.1",
-      "port": 9999
+      "port": "25565"
     }
   },
   "visitor": {
@@ -26,8 +27,8 @@
     },
     "server_address": {
       "internet_ip": "127.0.0.1",
-      "port": 9998
+      "port": "25566"
     },
-    "virtual_open_port": 25566
+    "virtual_open_port": "25566"
   }
 }
