--- a/client/client/config.json
+++ b/client/client/config.json
@@ -9,10 +9,10 @@
       },
       "file_log": true
     },
-    "open_port": "25565",
+    "open_port": 25565,
     "server_address": {
       "internet_ip": "127.0.0.1",
-      "port": "25565"
+      "port": 25565
     }
   },
   "visitor": {
@@ -27,8 +27,8 @@
     },
     "server_address": {
       "internet_ip": "127.0.0.1",
-      "port": "25566"
+      "port": 25566
     },
-    "virtual_open_port": "25566"
+    "virtual_open_port": 25566
   }
 }
