--- a/client/client/config.json
+++ b/client/client/config.json
@@ -1,21 +1,6 @@
 {
-  "host": {
-    "data_max_length": 999999,
-    "debug": {
-      "clear_log": true,
-      "console": {
-        "content": false,
-        "length": true
-      },
-      "file_log": true
-    },
-    "open_port": 9999,
-    "server_address": {
-      "internet_ip": "127.0.0.1",
-      "port": 25565
-    }
-  },
-  "visitor": {
+  "crypto": true,
+  "guest": {
     "data_max_length": 999999,
     "debug": {
       "clear_log": true,
@@ -31,5 +16,20 @@
     },
     "virtual_open_port": 9998
   },
-  "crypto": true
+  "host": {
+    "data_max_length": 999999,
+    "debug": {
+      "clear_log": true,
+      "console": {
+        "content": false,
+        "length": true
+      },
+      "file_log": true
+    },
+    "open_port": 9999,
+    "server_address": {
+      "internet_ip": "127.0.0.1",
+      "port": 25565
+    }
+  }
 }
