--- a/client/client/config.json
+++ b/client/client/config.json
@@ -1,5 +1,5 @@
 {
-  "crypt": false,
+  "crypt": true,
   "guest": {
     "data_max_length": 999999,
     "debug": {
@@ -14,7 +14,7 @@
       "internet_ip": "127.0.0.1",
       "port": 25566
     },
-    "virtual_open_port": 9999
+    "virtual_open_port": 9998
   },
   "host": {
     "data_max_length": 999999,
@@ -26,7 +26,7 @@
       },
       "file_log": true
     },
-    "open_port": 25565,
+    "open_port": 9999,
     "server_address": {
       "internet_ip": "127.0.0.1",
       "port": 25565
